[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menu Stuff/Menu/menuBG.png" type="Texture" id=1]
[ext_resource path="res://Menu Stuff/Lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://System/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Font/vcr.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menu Stuff/Lobby/Select_Char.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="Lobby" type="Node2D"]
script = ExtResource( 2 )

[node name="BackGround" type="Sprite" parent="."]
modulate = Color( 0.156863, 0.254902, 0.545098, 1 )
position = Vector2( 643, 365 )
texture = ExtResource( 1 )

[node name="Player1Text" type="Label" parent="."]
margin_left = 637.0
margin_top = 612.0
margin_right = 1280.0
margin_bottom = 655.0
custom_fonts/font = SubResource( 2 )
text = "Player 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Position2D" parent="."]
position = Vector2( 809, 385 )
scale = Vector2( 0.7, 0.7 )

[node name="Player" parent="Player1" instance=ExtResource( 3 )]
position = Vector2( 0, -82.8571 )

[node name="Player2Text" type="Label" parent="."]
margin_top = 612.0
margin_right = 643.0
margin_bottom = 655.0
custom_fonts/font = SubResource( 2 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Position2D" parent="."]
visible = false
position = Vector2( 474, 386 )
scale = Vector2( -0.7, 0.7 )

[node name="Player" parent="Player2" instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="Text" type="Label" parent="."]
margin_top = 160.0
margin_right = 1280.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 1 )
text = "Waiting for opponent"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_Char" type="OptionButton" parent="."]
margin_left = 637.0
margin_top = 655.0
margin_right = 1309.0
margin_bottom = 721.0
rect_scale = Vector2( 0.957304, 0.992136 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Boyfriend"
align = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
